finalizacion funcionalidad carrito, inicio login

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ p {
 h2 {
     color: white;
 }
+h3 {
+    color: white;
+}
 .card-title {
     color: white; 
 }
@@ -82,3 +85,21 @@ footer{
 .numero{
     color: white;
 }
+
+.disabled{
+    display: none;
+}
+
+small{
+    color: white;
+}
+
+.login-container {
+    width: 400px; /* Ancho del contenedor */
+    margin:  auto; /* Centrar vertical y horizontalmente */
+    background-color: #fff; /* Color de fondo del contenedor */
+    border-radius: 10px; /* Bordes redondeados */
+    padding: 30px; /* Espaciado interno */
+    box-shadow: 0px 0px 10px 0px #f3f2f2; /* Sombra */
+}
+
