--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     background-image: url(../img/fondo.png);
+    background: cover;
     display: flex;
     flex-direction: column;
     min-height: 100%;
@@ -101,5 +102,23 @@ small{
     border-radius: 10px; /* Bordes redondeados */
     padding: 30px; /* Espaciado interno */
     box-shadow: 0px 0px 10px 0px #f3f2f2; /* Sombra */
+}
+
+.recovery-container {
+    width: 400px; /* Ancho del contenedor */
+    margin: auto; /* Centrar vertical y horizontalmente */
+    background-color: #fff; /* Color de fondo del contenedor */
+    border-radius: 10px; /* Bordes redondeados */
+    padding: 30px; /* Espaciado interno */
+    box-shadow: 0px 0px 10px 0px  #f3f2f2;; /* Sombra */
+}
+
+.custom-container{
+    width: 400px; /* Ancho del contenedor */
+    margin: auto; /* Centrar vertical y horizontalmente */
+    background-color: #fff; /* Color de fondo del contenedor */
+    border-radius: 10px; /* Bordes redondeados */
+    padding: 30px; /* Espaciado interno */
+    box-shadow: 0px 0px 10px 0px  #f3f2f2;; /* Sombra */
 }
 
